W7D2 Order of Songs in Playlist and Album to be persistent